改进: 调整应用图标;优化我的及登录布局;

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">iov</string>
+    <string name="app_name">开源车联网</string>
     <string name="community">探索</string>
     <string name="service">服务</string>
     <string name="vehicle">爱车</string>
