--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,23 @@
 <resources>
+    <string name="agree_user_agreement">请勾选同意用户协议</string>
     <string name="app_name">开源车联网</string>
     <string name="community">探索</string>
-    <string name="service">服务</string>
-    <string name="vehicle">爱车</string>
+    <string name="confirm">确认</string>
+    <string name="get_verify_code">获取验证码</string>
+    <string name="input_mobile">请输入手机号</string>
+    <string name="input_verify_code">请输入验证码</string>
+    <string name="login_confirm_tip">我已阅读并同意《用户协议》《隐私政策》，用户首次登录将会同步注册APP账号</string>
+    <string name="login_register">登录 / 注册</string>
+    <string name="logout">退出登录</string>
     <string name="mall">商城</string>
     <string name="my">我的</string>
-    <string name="version">版本</string>
+    <string name="not_login_welcome">Hi，\n欢迎您的到来</string>
+    <string name="reget_verigy_code">重新获取验证码</string>
+    <string name="service">服务</string>
     <string name="setting">设置</string>
+    <string name="sign_in">签到</string>
+    <string name="tip">提示</string>
+    <string name="vehicle">爱车</string>
+    <string name="verify_code_has_sent">验证码已发送至您的手机：</string>
+    <string name="version">版本</string>
 </resources>
